@@ -1,3 +1,6 @@
+30. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
+	- remember start/end date in find dialog
+
 29. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
 	- remember last search pattern added
 	- searching min size/max size added 
